Se finaliza la aplicación básica sobre como generar un codigo QR, ademas se puede descargar y posteriormente cargar para validar su contenido

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     <h1>Generador codigo QR</h1>
     <div class="d-flex justify-content-center align-items-center container">
         <form onsubmit="generate(); return false">
-            <h3>Ingresa nombre</h3>
+            <h3>Ingresa nombre y presiona enter</h3>
             <div class="form-gruop p-4">
-
                 <input type="text" id="qr" name="">
             </div>
         </form>
