--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
             <h3>Ingresar Nombre</h3>
             <div class="form-gruop p-4">
                 <input type="text" id="qr" name="">
-                <input type="button" onclick="generate()" class="btn btn-success" value="Generar" />
+
             </div>
+            <input id="button" type="button" onclick="generate()" class="btn btn-success" value="Generar" />
         </form>
+
     </div>
     <div class="d-flex justify-content-center align-items-center container">
         <div class="form-group p-4">
