Se agrega la carpeta app y se mueven los archivos de javascript para un mejor orden

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
-    <script type="text/javascript" src="jquery.js"></script>
-    <script type="text/javascript" src="qrcode.js"></script>
+    <script type="text/javascript" src="app/jquery.js"></script>
+    <script type="text/javascript" src="app/qrcode.js"></script>
 </head>
 
 <body>
@@ -58,7 +58,7 @@
         }
     </script>
 
-    <script type="text/javascript" src="qrReader.js"></script>
+    <script type="text/javascript" src="app/qrReader.js"></script>
 </body>
 
 </html>
